# clock

design1/: clock.js
design2/: clock.js
search/: clocksearch.cabal  stack.yaml
search/src/: Bitwise.hs  Horizontal.hs  NoTransparent.hs  Overlay.hs  Vertical.hs
