name:                clocksearch
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mvr/clocksearch#readme
license:             BSD3
license-file:        LICENSE
author:              Mitchell Riley
maintainer:          mitchell.v.riley@gmail.com
copyright:           2017 Mitchell Riley
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , sbv
  default-language:    Haskell2010
